--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400i,700" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Hero Banner</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400i,700" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Giant space moths invade Earth</h1>
-  <h2>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</h2>
-  <img src="images/placeholder-16by9.svg" alt=""/>
+  <div class="banner">
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
+    <div class="banner-content">
+      <h2 class="title"><span>Giant space moths invade Earth</span></h2>
+      <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
+    </div>
+  </div>
 </body>
 </html>
